# opengl

./: .gitignore  csl2215-glpractical.sln
dependencies/: .gitignore  README.md
dependencies/tucano/doc/: effects.md  examples.md  framebufferTutorial.md  meshTutorial.md  textureTutorial.md  welcome.md
dependencies/tucano/tucano/: camera.hpp  effect.hpp  framebuffer.hpp  mesh.hpp  model.hpp  shader.hpp
dependencies/tucano/tucano/shapes/: arrow.hpp  box.hpp  camerarep.hpp  cone.hpp  coordinateaxes.hpp  cylinder.hpp  frustrum.hpp  plane.hpp  quad.hpp  sphere.hpp
dependencies/tucano/tucano/utils/: bezierspline.hpp  flycamera.hpp  frustum.hpp  imageIO.hpp  misc.hpp  objimporter.hpp  pamIO.hpp  path.hpp  plyimporter.hpp  pngIO.hpp  polynomial.hpp  ppmIO.hpp  rply.hpp  trackball.hpp
exercise-pipeline/: CMakeLists.txt  exercise-pipeline.vcxproj
exercise-pipeline/src/: main.cpp  simpleshader.hpp  widget.cpp  widget.hpp
exercise-pipeline/src/shaders/: shading.frag  shading.vert
exercise-transformations/: .gitignore  CMakeLists.txt  exercise-transformations.vcxproj
exercise-transformations/src/: main.cpp  simpleshader.hpp  widget.cpp  widget.hpp
exercise-transformations/src/shaders/: shading.frag  shading.vert
helloworld/: CMakeLists.txt  helloworld.vcxproj
helloworld/src/: helloworld.hpp  main.cpp  widget.cpp  widget.hpp
helloworld/src/shaders/: helloworld.frag  helloworld.vert
